--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -25,7 +25,7 @@ header {
 		.company {
 			background-color: #588dd4;
 			color: #fff;
-			padding:0 10px;
+			padding:3px 10px;
 			text-align: center;
 			position:absolute;
 			top:0;
@@ -35,7 +35,7 @@ header {
 			line-height: 15px;
 		}
 		.title {
-			font-size: 17px;
+			font-size: 18px;
 		}
 		.sub-title {
 			font-size: 15px;
@@ -227,9 +227,8 @@ header {
 	margin-top:8px;
 	text-align:center;
 	img {
-		width: 5px;
-		transform: rotate(90deg);
-		vertical-align: 0px;
+		width: 10px;
+		vertical-align: 2px;
 	}
 }
 .button-container{
@@ -248,12 +247,12 @@ header {
 	padding:0 10px 15px;
 	color:#555;
 	h4{
-		font-size:13px;
+		font-size:14px;
 		margin:0;
 		margin-top: 18px;
 	}
 	p{
-		font-size:12px;	
+		font-size:14px;	
 		margin:0;
 	}
 }
