--- a/app/template/new/product_64.html
+++ b/app/template/new/product_64.html
@@ -56,7 +56,7 @@
 
 			</div>
 			<div class="more-1-container ">
-				查看更多  <img src="img/jiantou.png" />
+				查看更多  <img src="img/temai/blue_arrow.jpg" />
 			</div>
 
 			<div class="button-container">
