--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -60,7 +60,7 @@
 <div  class="bottom_container" id="customerSlider" >
 	<div class="score_container" style="top:-25px; ">
 			<span id="money_score" class="score">0</span>
-			<span class="danwei">分</span>
+			<span class="danwei">万</span>
 	</div>
 	<div  style="position: absolute;right:0;top:-33px; font-size:16px;color:#999;text-align: right;" ng-if="type==4 || type ==2">
 			保1年
