--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -321,8 +321,8 @@
 </div>
 
 <div class="cell pay_container"  >
-	<a href="javascript:void(0)" class="btn btn_n_primary right"  ng-click="submitbt()" id="submitButton" >确认投保</a>
-	<a href="javascript:void(0)" class="btn btn_n_primary left tg_dz_fr"   id="submitButton" >共计  <span class="money_size">{{premium}}</span> 元</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary right"  ng-click="submitbt()" id="confirmBtn" >确认投保</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary left tg_dz_fr"   id="submitBtn" >共计  <span class="money_size">{{premium}}</span> 元</a>
 </div>
 
 <script type="text/javascript">
