--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -313,7 +313,7 @@ header {
   margin-bottom: 60px; }
 
 .introd-container {
-  padding: 10px; }
+  padding: 10px 0 0; }
   .introd-container h5 {
     font-weight: normal;
     font-size: 13px;
