--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -117,7 +117,7 @@ header {
 	margin-bottom:60px;
 }
 .introd-container{
-	padding:10px;
+	padding:10px 0 0 ;
 	h5{
 		font-weight: normal;
 		font-size:13px;
