--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -2,7 +2,9 @@
 <link rel="stylesheet" href="wx_bx_gl/css/swiper.min.css">
 <style>
 
-
+.swiper-container-horizontal>.swiper-pagination-bullets{
+	bottom: 7px;
+}
 
 .swiper-pagination-bullet{
 	background-color: #fff;
