--- a/app/partials/temai_list.html
+++ b/app/partials/temai_list.html
@@ -14,7 +14,7 @@
 		</div>	
 		<div class="wrap">
 			<div class="title">{{item.name}}</div>	
-			<div class="des"><span class="hot">热卖</span> {{item.description}}</div>	
+			<div class="des"><span class="hot" style="display: none">热卖</span> {{item.description}}</div>	
 			<div class="money">{{item.front_price}}</div>	
 		</div>	
 	</div>
