--- a/app/css/temai_index.css
+++ b/app/css/temai_index.css
@@ -227,6 +227,12 @@
 body {
   background-color: #f5f5f5; }
 
+.left {
+  float: left; }
+
+.right {
+  float: right; }
+
 .qrcode-wrapper {
   display: none;
   position: fixed;
@@ -238,28 +244,43 @@ body {
   .qrcode-wrapper .qrcode-container {
     position: relative;
     top: .6rem;
-    width: 70%;
+    width: 60%;
     margin-left: 15%; }
     .qrcode-wrapper .qrcode-container img {
       width: 100%; }
 
 header {
   background-color: #1e4e8e;
-  height: 45px;
-  line-height: 45px;
-  color: #88aeee; }
+  height: .44rem;
+  line-height: .44rem;
+  box-sizing: border-box;
+  padding: .07rem .1rem; }
+  header .div_inline {
+    height: .3rem;
+    line-height: .3rem;
+    font-size: .13rem;
+    color: #88aeee; }
+  header .focus_btn {
+    display: inline-block;
+    height: .3rem;
+    padding: 0 .2rem;
+    color: #fff;
+    font-size: .13rem;
+    text-align: center;
+    line-height: .3rem;
+    border-radius: 3px;
+    border: 1px solid #588dd4;
+    box-sizing: border-box; }
   header .logo-container {
-    padding: 5px 0;
     margin-right: 5px;
-    margin-top: 10px;
+    margin-top: .03rem;
     float: left; }
     header .logo-container .logo {
       border-right: 1px solid #588dd4;
-      margin-left: 20px;
       line-height: 0;
       padding-right: 5px; }
       header .logo-container .logo img {
-        width: 50px; }
+        width: .67rem; }
 
 .swiper-container {
   line-height: 0; }
@@ -287,7 +308,8 @@ header {
     }*/
     text-align: center;
     height: 80px;
-    padding-top: 23px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     border-right: 1px solid #e2e2e2;
     border-bottom: 1px solid #e2e2e2;
     font-size: 13px; }
@@ -300,11 +322,13 @@ header {
 
 .recommend {
   background-color: #FFF;
-  margin-top: 20px;
+  margin-top: .2rem;
   height: 40px;
   line-height: 40px;
   padding-left: 10px;
-  border-bottom: 1px solid #e2e2e2; }
+  border-bottom: 1px solid #e2e2e2;
+  color: #555;
+  font-size: 15px; }
   .recommend img {
     width: 25px;
     vertical-align: -5px; }
@@ -316,8 +340,7 @@ header {
   display: -ms-flexbox;
   display: flex;
   background-color: #FFF;
-  margin-top: 8px;
-  margin-bottom: 8px; }
+  margin-bottom: .1rem; }
   .recommend-content .introd {
     -webkit-box-flex: 1;
     -webkit-flex: 1;
