--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -62,7 +62,7 @@
 					<td ng-if="item.sum_insured>0">{{item.sum_insured | number}}元{{item.danwei}}</td>
 					<td ng-if="item.sum_insured==0">赠送</td>
 				</tr>
-				<tr  class="more_coverages_button" ng-show="plan.second_coverage_beans.length>6" data-switch='on'><td colspan="2" class="gray"><span>查看更多</span><img src="img/temai/arrow.jpg" class="arrow"></td></tr>
+				<tr  class="more_coverages_button" ng-show="plan.second_coverage_beans.length>6" data-switch='on'><td colspan="2" class="word_color"><span>查看更多</span><img src="img/temai/arrow.jpg" class="arrow"></td></tr>
 				
 			</table>
 		</div>
