--- a/app/partials/temai_list.html
+++ b/app/partials/temai_list.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" type="text/css" href="css/temai_list.css?rev=d46792c69939884a30645f961671aaf5">
+<link rel="stylesheet" type="text/css" href="css/temai_list.css?rev=sdfsdfsdfd">
 
 
 
