--- a/app/template/new/product_64.html
+++ b/app/template/new/product_64.html
@@ -99,7 +99,7 @@
 			</li>
 			</ul>
 			<div class="more-container ">
-				<a href="javascript:;" class="weui_btn weui_btn_plain_more">查看更多
+				<a href="javascript:;" class="weui_btn weui_btn_plain_more word_color ">查看更多
 					<img src="img/jiantou.png" />
 				</a>
 			</div>
