--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -240,14 +240,14 @@ header {
     header .top-container .company {
       background-color: #588dd4;
       color: #fff;
-      padding: 0 10px;
+      padding: .02rem .1rem;
       text-align: center;
       position: absolute;
       top: 0;
       right: 10px;
-      border-bottom-left-radius: 2px;
-      border-bottom-right-radius: 2px;
-      line-height: 15px; }
+      border-bottom-left-radius: 3px;
+      border-bottom-right-radius: 3px;
+      line-height: .2rem; }
     header .top-container .title {
       font-size: 17px; }
     header .top-container .sub-title {
@@ -568,3 +568,13 @@ header {
   border-left: 1px solid #c1c1c1;
   vertical-align: middle;
   background: #fff url("../img/plus.jpg") no-repeat center/12px; }
+
+.word_color {
+  color: #588dd4;
+  font-size: 14px; }
+
+.jian_font {
+  display: block;
+  padding: 0 14px;
+  line-height: 2.4;
+  text-align: center; }
