--- a/app/css/temai_index.css
+++ b/app/css/temai_index.css
@@ -307,9 +307,9 @@ header {
         width: .1px;
     }*/
     text-align: center;
-    height: 80px;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    height: 1.03rem;
+    padding-top: .25rem;
+    padding-bottom: .2rem;
     border-right: 1px solid #e2e2e2;
     border-bottom: 1px solid #e2e2e2;
     font-size: 13px; }
