--- a/app/sass/temai_index.scss
+++ b/app/sass/temai_index.scss
@@ -84,9 +84,9 @@ header{
 	.item{
 		@include flex(1);
 		text-align: center;
-		height:80px;
-		padding-top: 16px;
-		padding-bottom: 16px;
+		height:1.03rem;
+		padding-top: .25rem;
+		padding-bottom: .2rem;
 		border-right:1px solid #e2e2e2;
 		border-bottom:1px solid #e2e2e2;
 		font-size:13px;
