--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" type="text/css" href="css/temai_index.css?rev=61ee2a6b574ff901cfbfd2e29cfad394">
 <link rel="stylesheet" href="wx_bx_gl/css/swiper.min.css">
 <style>
 .swiper-container-horizontal>.swiper-pagination-bullets{
@@ -52,6 +51,7 @@
 	<img src="img/temai/hot.jpg">	
 	热门推荐		
 </div>
+<div   cg-busy="listPromise">
 <div style="margin-bottom: 10px">
 <div class="recommend-content" ng-repeat="category in categorys">
 	<div class="introd" ng-click="goCategory(category.id)">
@@ -71,35 +71,10 @@
 		</div>	
 	</div>
 </div>
-
-<!--
-<div class="recommend-content">
-	<div class="introd">
-		<div class="box">
-			<img src="img/temai/introd.png"/>
-			<div class="name">旅游</div>
-			<div class="more">查看更多</div>
-		</div>
-	</div>
-	<div class="recommend-container">
-			<div class="flex-item">
-				<div class="title">平安|航空延误险</div>
-				<div class="des">延误2小时起赔，200元保障 仅需30元!</div>
-				<div class="money">258元起</div>
-			</div>	
-			<div class="flex-item">
-				<div class="title">平安|航空延误险</div>
-				<div class="des">延误2小时起赔，200元保障 仅需30元!</div>
-				<div class="money">258元起</div>
-			</div>	
-		
-	</div>
 </div>
--->
-
-</div>
-<div class=" btn_container">
+<div class=" btn_container" ng-show="loadReady">
 	<a href="tel:4009920205" class="btn btn_n_primary "  ><img src="img/temai/kefu.png"> <span>客服电话 </span>400-992-0205</a>
+</div>
 </div>
 <div class="qrcode-wrapper">
 	<div class="qrcode-container" >
