--- a/app/template/new/product_9.html
+++ b/app/template/new/product_9.html
@@ -41,27 +41,23 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.承保年龄</h4>
-			<p>1-80周岁，被保险人常住地为中华人民共和国境内。</p>
-			<h4>2.承保范围</h4>
-			<p>攀岩、漂流、滑雪、潜水、骑马、登山（无海拔高度限制）等户外运动，并承保旅途中的高原反应、中暑等急性病，但滑翔翼，跳伞活动等空中活动不承保。</p>
-			<h4>3.限制区域</h4>
-			<p>本保险不承保任何直接或间接由于前往或途经阿富汗、缅甸、古巴、刚果民主共和国、伊朗、伊拉克、利比里亚、苏丹、叙利亚，或在上述国家旅行期间发生的保险事故。</p>
-			<h4 class="hide">4.投保限制 </h4>
-			<p class="hide">在中国境内（不含港澳台）的外籍人士购买本产品需满足：至少在中国境内居住或工作满半年以上。不承保回原国籍。</p>
-			<h4 class="hide">5.保险期间 </h4>
-			<p class="hide">该产品保险期限最长为一年，每次旅行的最长承保时间为30天。</p>
-            <h4 class="hide">6.投保份数 </h4>
-			<p class="hide">投保份数限定：被产品每一被保险人限投保一份，多投无效，保险公司不承担多投的保险责任。</p>
+			<p>18-70周岁（含18、70周岁）。</p>
+			<h4>2.份数限制</h4>
+			<p>每一被保险人限投一份，若同一个被保险人自愿投保由安联保险公司承保的多种综合保险（不包括团体保险），且在不同保障产品中有相同保障利益的，则保险公司仅按其中保险金额最高者做出赔偿。</p>
+			<h4>3.投保限制</h4>
+			<p>在中国境内（不含港澳台）的外籍人士购买本产品需满足：在中国境内工作或居住满183天以上；如涉及紧急救援，将送返至被保险人在中国的常住地址。</p>
+			<h4 class="hide">4.道路救援说明 </h4>
+			<p class="hide">本产品中的道路救援必须是保险公司指定的救援公司提供，保险期内没有次数限制，道路救援电话为+8620 8513-2999或400-800-2020；其中修车期间酒店住宿服务和修车期间继续旅行服务，被保险人只能选择其中一项。</p>
 
 
 			</div>
 			<div class="more-1-container ">
-				查看更多  <img src="img/jiantou.png" />
+				查看更多  <img src="img/temai/blue_arrow.jpg" />
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/200" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=1" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/18" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=5" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
@@ -69,37 +65,37 @@
 			<ul >
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>我要去东南亚能用这个保险吗？</div>	</div>	
+				<div class="qa-content"><div>节假日双倍赔付是什么意思啊？</div>	</div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>您好，这款产品仅保障中国大陆境内（不含港澳台地区），因此东南亚或港澳台是不适用的。</div>	
+					<div>您好，节假日双倍赔付是指如果意外事故发生在节假日，那么最高赔付额比平时高一倍。节假日指法定假期和双休日。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>航班延误也有赔偿吗？</div></div>	
+				<div class="qa-content"><div>请问这份产品的受益人是谁？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>您好，航班每延误5小时，赔偿300元，最高赔付金额为600元。</div>	
+					<div>您好，本产品的生存保险金受益人限为被保险人本人；身故保险金受益人为被保险人的法定继承人。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>住院津贴是否有免赔天数？住院天数怎么计算？</div></div>	
+				<div class="qa-content"><div>万一真的发生意外，家人不知道本人投保了，那怎么办？</div></div>	
 			</li>
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>您好，每日住院津贴是无免赔天数，但总赔偿日数以90天为限。本产品所称的住院日数：是指被保险人在医院住院部病房内实际的住院治疗日数，住院满二十四小时为一日。</div>
+					<div>您好，您购买成功后可以下载电子保单，建议您下载完成后自行将电子保单打印出来并告知您的家人！</div>
 				</div>
 			</li>
 			</ul>
 			<div class="more-container ">
-				<a href="javascript:;" class="weui_btn weui_btn_plain_more">查看更多
+				<a href="javascript:;" class="weui_btn weui_btn_plain_more word_color ">查看更多
 					<img src="img/jiantou.png" />
 				</a>
 			</div>
