特卖细节修改—+button样式统一+投保页失效时间null

--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -63,7 +63,7 @@
 					<img class="logo" ng-src="{{policy.icon}}"   />
 					<div style="margin-right: 1rem;">
 						<div class="product">{{policy.name}}</div>
-						<div class="time" ><img src="img/clock.jpg"/>  {{policy.coverageDate.substring(0,11)}} ~ {{policy.coverageDate.substring(20,30)}} </div>
+						<div class="time" ><img src="img/clock.jpg"/>  <span ng-moudle="policy.coverageDate">{{policy.coverageDate.substring(0,11)}} - {{policy.coverageDate.substring(20,30)}}</span> </div>
 					</div>
 					<div style="clear:both;"></div>
 
