--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -363,6 +363,7 @@ header {
 	text-align: center;
 	
 }
-// .word_jian {
-// 	border: 1px solid #ccc;
-// }
+.more_ctrl {
+	width: 110px;
+	margin: 0 auto 20px;
+}
