--- a/app/template/new/product_64.html
+++ b/app/template/new/product_64.html
@@ -98,9 +98,9 @@
 				</div>
 			</li>
 			</ul>
-			<div class="more-container ">
+			<div class="more_ctrl">
 				<a href="javascript:;" class="weui_btn weui_btn_plain_more word_color ">查看更多
-					<img src="img/jiantou.png" />
+					<img src="img/temai/blue_arrow.jpg" class="arrow" />
 				</a>
 			</div>
 		</div>
