--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -578,3 +578,7 @@ header {
   padding: 0 14px;
   line-height: 2.4;
   text-align: center; }
+
+.more_ctrl {
+  width: 110px;
+  margin: 0 auto 20px; }
