--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -138,7 +138,7 @@ $(function(){
  	 $(".know-content").children().removeClass("hide");
      $(this).hide();
  });
-  $("body").on("click",".more-container",function(){
+  $("body").on("click",".more_ctrl",function(){
  	 $(".qa-container").find("li").removeClass("hide");
      $(this).hide();
  });
