--- a/app/css/bz_ts.css
+++ b/app/css/bz_ts.css
@@ -221,20 +221,80 @@
  * @class variables
  * @module Yo
  */
-* {
-  box-sizing: border-box; }
+.left {
+  float: left; }
 
-body {
-  background-color: #f5f5f5; }
+.right {
+  float: right; }
 
-.nav {
+.promote_ctrl .head_ctrl {
+  background: #006ee9;
+  padding: 25px 10px;
+  overflow: auto; }
+  .promote_ctrl .head_ctrl .head_left {
+    float: left; }
+    .promote_ctrl .head_ctrl .head_left .head_word {
+      font-size: .19rem;
+      color: #fff; }
+    .promote_ctrl .head_ctrl .head_left span {
+      display: inline-block;
+      width: .15rem;
+      height: .15rem;
+      background: #fff;
+      border-radius: 50%;
+      margin-right: 5px; }
+    .promote_ctrl .head_ctrl .head_left .head_state {
+      font-size: .15rem;
+      color: #97c8ff; }
+  .promote_ctrl .head_ctrl .head_center {
+    float: left;
+    font-size: .15rem;
+    color: #fff;
+    padding: .17rem 0 0 .3rem; }
+    .promote_ctrl .head_ctrl .head_center img {
+      margin-left: .05rem;
+      width: .45rem;
+      display: block; }
+  .promote_ctrl .head_ctrl .head_right {
+    float: right; }
+    .promote_ctrl .head_ctrl .head_right .score {
+      font-size: .51rem;
+      color: #fff;
+      text-align: center;
+      line-height: normal; }
+    .promote_ctrl .head_ctrl .head_right div:nth-child(2) {
+      width: 1.16rem;
+      height: .38rem;
+      box-sizing: border-box;
+      border: 1px solid #97c8ff;
+      border-radius: 2px;
+      line-height: .38rem;
+      text-align: center;
+      color: #fff; }
+
+.promote_ctrl .promote_main {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  display: flex;
-  background-color: #FFF; }
-  .nav .item {
+  display: flex; }
+  .promote_ctrl .promote_main .main_left {
+    width: .7rem; }
+    .promote_ctrl .promote_main .main_left .shuxian {
+      width: 27px;
+      height: 44px;
+      border-right: 1px solid #ccc; }
+    .promote_ctrl .promote_main .main_left .quan_img {
+      width: 30px;
+      height: 30px;
+      background: #ff6652;
+      border-radius: 50%;
+      margin-left: 12px;
+      text-align: center; }
+      .promote_ctrl .promote_main .main_left .quan_img img {
+        margin-top: 7px;
+        width: 15px; }
+  .promote_ctrl .promote_main .pro_main_ctrl {
     -webkit-box-flex: 1;
     -webkit-flex: 1;
     -moz-box-flex: 1;
@@ -245,91 +305,23 @@ body {
         height: .1px;
     } @else {
         width: .1px;
-    }*/
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    font-size: 15px;
-    border-bottom: 1px solid #e2e2e2; }
-  .nav .item.select {
-    color: #588dd4;
-    border-bottom: 3px solid #588dd4; }
-
-.insurance {
-  background-color: #f5f5f5;
-  margin-top: 5px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  flex-direction: column; }
-  .insurance .insurance-item {
-    background-color: #fff;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -moz-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    /*
-    @if $direction == column {
-        height: .1px;
-    } @else {
-        width: .1px;
-    }*/
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-bottom: 5px;
-    border-bottom: 1px solid #e2e2e2; }
-    .insurance .insurance-item .logo {
-      width: 1.07rem;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      border-right: 1px solid #e2e2e2; }
-      .insurance .insurance-item .logo img {
-        width: 100px; }
-    .insurance .insurance-item .wrap {
-      -webkit-box-flex: 1;
-      -webkit-flex: 1;
-      -moz-box-flex: 1;
-      -ms-flex: 1;
-      flex: 1;
-      /*
-    @if $direction == column {
-        height: .1px;
-    } @else {
-        width: .1px;
-    }*/
-      padding: .15rem; }
-      .insurance .insurance-item .wrap .hot, .insurance .insurance-item .wrap .special_offer {
-        background-color: #ff5c00;
-        color: #fff;
+    }*/ }
+    .promote_ctrl .promote_main .pro_main_ctrl .main_word {
+      overflow: auto;
+      padding: 32px 10px 0 0; }
+      .promote_ctrl .promote_main .pro_main_ctrl .main_word .main_head {
+        font-size: 16px;
+        color: #555; }
+      .promote_ctrl .promote_main .pro_main_ctrl .main_word .change_word {
+        font-size: 12px;
+        color: #999; }
+      .promote_ctrl .promote_main .pro_main_ctrl .main_word .ts_btn {
+        background: #5aa8ff;
+        width: 64px;
+        height: 24px;
         border-radius: 3px;
-        padding: .01rem .03rem;
-        font-size: .1rem; }
-      .insurance .insurance-item .wrap .special_offer {
-        background-color: #ff005a; }
-      .insurance .insurance-item .wrap .title {
-        color: #555;
-        font-size: .15rem; }
-      .insurance .insurance-item .wrap .des {
-        color: #999;
-        font-size: .13rem; }
-      .insurance .insurance-item .wrap .money {
-        color: #ff5c00;
-        font-size: .15rem; }
+        line-height: 24px;
+        text-align: center;
+        font-size: 12px;
+        color: #fff;
+        margin-top: 10px; }
