--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=df05fa783c4440cac8641685c3488786">
+<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=700c527807cd197158826e0c1e68895e">
 
 <div  cg-busy="myPromise" >
 	<header>
@@ -80,27 +80,31 @@
 <div class="mask " id="detail_mask_container"  style="display: none;z-index:100000">
 	<div class="head-container">
 		<span class="close"></span>
-		<div class="fl">
-			<img ng-src="{{data.small_image}}" ></div>
+		<div class="fl ">
+			<div class="small_img_ctrl"><img ng-src="{{data.small_image}}" ></div>
+		</div>
 		<div class="fl">
 			<p >
-				<span  style="font-size:18px;color:#ff5c00;">{{money | number}}</span>
-				元
+				<span  style="font-size:18px;color:#ff5c00;">{{money | number}}元</span>
+				
 			</p>
-			<p>*最终购买价格</p>
+			<p><span style="color: #ff5c00">*</span>最终购买价格</p>
 			<p>以被保险人身份信息测算为准</p>
 		</div>
-		<div class="line" style="clear:both;"></div>
+		<div  style="clear:both;"></div>
 
 		<div class="select-container">
 			<h4>保障方案</h4>
 			<a href="javascript:void(0)" class="button button_primary" ng-click="changeTaoCan($event,item)" ng-class="item.id==plan.id?'button_hover':''" ng-repeat="item in data.insurance_plans">{{item.name}}</a>
-			<!--
-      <a href="javascript:void(0)" class="button button_primary button_hover">经济型</a>
-		<a href="javascript:void(0)" class="button button_primary">实惠制</a>
-		-->
-	</div>
-
+				<!--
+	      <a href="javascript:void(0)" class="button button_primary button_hover">经济型</a>
+			<a href="javascript:void(0)" class="button button_primary">实惠制</a>
+			-->
+		</div>
+    <!-- <div class="select-container">
+		<h4>保额</h4>
+		<a href="javascript:void(0)" class="button button_primary"   ng-click=""  ng-class=""  ></a>
+	</div> -->
 	<div class="select-container">
 		<h4>保障期间</h4>
 		<a href="javascript:void(0)" class="button button_primary"   ng-click="changeDuration($event,item)"  ng-class="item==coverage_period?'button_hover':''"  ng-repeat="item in maskSelectPlan.coverage_periods">{{item}}{{genDanwei(maskSelectPlan.coverage_period_type)}}</a>
@@ -112,15 +116,11 @@
 		<a href="javascript:void(0)" class="button button_primary"  ng-click="changeFee($event,nul)"   ng-class="charge_period==null?'button_hover':''">一次交清</a>
 
 		<a href="javascript:void(0)" class="button button_primary"  ng-click="changeFee($event,item)"   ng-class="item==charge_period?'button_hover':''"  ng-repeat="item in maskSelectPlan.charge_periods">{{item}}</a>
-
 	</div>
-
 	<div class="fix_container">
 		<a href="javascript:void(0)"  style="height:45px;line-height: 45px;"  ng-click="submit()"  class="btn btn_n_primary">确定</a>
 	</div>
-
 </div>
-
 </div>
 
 <div class="mask " id="popup">
