--- a/app/sass/temai_index.scss
+++ b/app/sass/temai_index.scss
@@ -159,14 +159,17 @@ header{
 				@include align-items(center);
 				@include justify-content(center);	
 
-				.hot{
-						display: inline-block;
-						background-color: #ff5c00;
-						border-radius:4px;
-						color:#fff;
-						padding:0px 3px;
-						font-size:13px;
+				.hot,.special_offer{
+					display: inline-block;
+					background-color: #ff5c00;
+					border-radius:4px;
+					color:#fff;
+					padding:0px 3px;
+					font-size:13px;
 					}
+				.special_offer {
+					background-color: #ff005a;
+				}
 				.title{
 					color:#555;
 					font-size:15px;
@@ -174,10 +177,12 @@ header{
 				}
 				.des{
 					color:#999;
+					font-size: 13px;
 				}
 				.money{
 					color:#ff5c00;
-					font-weight: bold;
+					// font-weight: bold;
+					font-size: 15px;
 				}
 			}
 			.flex-item >div{
