--- a/app/template/new/product_100.html
+++ b/app/template/new/product_100.html
@@ -17,8 +17,10 @@
 			
 			<h4>1. 投保限制</h4>
 			<p>每人限投1份</p>
-			<h4>2. 本保险被保险人年龄限30天-80周岁。</h4>
-			<h4>3. 被保险人乘坐的是国内航班，暂不支持春秋航空和国际航班。</h4>
+			<h4>2. 承保年龄</h4>
+			<p>本保险被保险人年龄限30天-80周岁。</p>
+			<h4>3. 航班限制</h4>
+			<p>被保险人乘坐的是国内航班，暂不支持春秋航空和国际航班。</p>
 			
 
 			</div>
@@ -27,8 +29,8 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="javascript:;" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-				<div class="right"><a href="javascript:;" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/11" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=2" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
 		</div>
