--- a/app/template/new/product_9.html
+++ b/app/template/new/product_9.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="img/product/jxydqq03.png" ></div>
+				<img src="img/product/ancxzjc01.png" ></div>
 			</div>
 		</div>
 		<!--
@@ -94,9 +94,9 @@
 				</div>
 			</li>
 			</ul>
-			<div class="more-container ">
+			<div class="more_ctrl">
 				<a href="javascript:;" class="weui_btn weui_btn_plain_more word_color ">查看更多
-					<img src="img/jiantou.png" />
+					<img src="img/temai/blue_arrow.jpg" class="arrow" />
 				</a>
 			</div>
 		</div>
