--- a/app/template/new/product_94.html
+++ b/app/template/new/product_94.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="img/product/jxydqq03.png" ></div>
+				<img src="img/product/jxydjn03.png" ></div>
 			</div>
 		</div>
 		<!--
@@ -60,7 +60,7 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/200" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/173" class="weui_btn weui_btn_plain_more">产品条款</a></div>
 				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=1" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
@@ -98,9 +98,9 @@
 				</div>
 			</li>
 			</ul>
-			<div class="more-container ">
-				<a href="javascript:;" class="weui_btn weui_btn_plain_more">查看更多
-					<img src="img/jiantou.png" />
+			<div class="more_ctrl">
+				<a href="javascript:;" class="weui_btn weui_btn_plain_more word_color ">查看更多
+					<img src="img/temai/blue_arrow.jpg" class="arrow" />
 				</a>
 			</div>
 		</div>
