--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -22,7 +22,7 @@
 
 	<div  class="bt_container">
 		<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
-		选择保障范围
+		选择保障项目
 	</div>
 	<div style="position: relative;" id="clockContainer">
 		<div class="score_container" style="bottom:40px;" >
@@ -34,7 +34,7 @@
 			<!---->
 			<p  style="position:absolute;left:27%;margin:0;top:40%;font-size:0.20rem;text-align: center;color:#588dd4;line-height: 24px;" id="default_text">
 			顺时针滑动<br/>
-			<span style="color:#999;">选择范围</span>
+			<span style="color:#999;">选择保障项目</span>
 			</p>
 
 			<div  style="position:relative;left:-0.5rem;opacity:0;color:#bbb;"  class="small">&nbsp;&nbsp;</div>
@@ -50,7 +50,7 @@
 
 		<div style="">
 			<img src="img/safe.jpg" style="width:15px;vertical-align: -3px;">
-			选择保障金额
+			选择保障金额 ( 最高赔付额 )
 		</div>
 		<!--
 		<a href="javascript:void(0)"   class="btn btn_n_primary"  ng-click="showCompute()">保额测算</a>
