--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=0237c5a5a2e75f32d1f496c5a4bcc083">
+<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=69f84077c36b95426c2d95627f4886bf">
 <div id="wrapper" class="wrapper">
 	<div class="bd_part_controller">
 		<div class="ul_contrl" ng-if="coupon_id==1">
@@ -7,7 +7,7 @@
 		</div>
 		<div class="ul_contrl" ng-if="coupon_id==2">
 			<p class="chanpin_name">中国平安-500万航空意外险</p>
-			<p class="pei_300">乘坐飞机人身意外身故/伤残保障<span>500</span>万</p>
+			<p class="pei_300">航空意外身故/伤残保险金：500万元<span>500</span>万</p>
 		</div>
 		<div class="ul_contrl" ng-if="coupon_id==3">
 			<div class="ul_contrl_top">
@@ -82,7 +82,7 @@
 		        <div ng-if="coupon_id==4" style="font-size:15px;padding-left:6px;height: .44rem;border: 1px solid #e2e2e2;background: #fff;line-height: .44rem;padding-left: 16px;font-size: 14px;color: #555;" ng-moudle="user.inEnd_date">{{user.inEnd_date | date:'yyyy/MM/dd'}}</div>
 
                 
-				<div class="baofei">由诺贝保险管家<span class="font_red">免费赠送</span></div>
+				<div class="baofei">该产品由诺贝保险管家<span class="font_red">免费赠送</span></div>
 			</div>
 			<div class="item">
 				<input type="checkbox" id="chek" checked="checked" ng-model="user.know_contract" name="know_contract" required >
