--- a/app/wx_share/partials/coupon_list.html
+++ b/app/wx_share/partials/coupon_list.html
@@ -17,5 +17,5 @@
         </div>
       </li>
     </ul>
-    <p class="default_text" id="reason_container">暂时没有保险劵</p>
+    <p class="default_text" id="reason_container" >保险劵暂无，您可以<span ng-click="goShare()" style="color:blue;text-decoration: underline;">参与活动免费领取</span>哦！</p>
 </div>
