--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -121,7 +121,7 @@
 		<div class="cell_hd cell_primary">
 			<a href="javascript:void(0)" class="btn btn_n_primary left"  ng-click="goUpBd();" id="submitButton">
 				<img src="img/upload_icon.png" style="width:14px;vertical-align: -2px;">
-			上传保单</a>
+			上传已有保单</a>
 		</div>
 		<div class="cell_hd cell_primary">
 			<a href="javascript:void(0)" class="btn btn_n_primary right"    ng-click="goDingzhi()" id="submitButton" ><img src="img/tsbz.png">&nbsp;提升保障</a>
