新定制页活动展示

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -9,7 +9,7 @@
 		<li></li>
 	</ul >
 	<div class="share_mian">
-		<img src="wx_share/img/my_bd/activity_big.jpg">
+		<img src="wx_share/img/my_bd/activity_big.png">
 		<!-- <img src="wx_share/img/my_bd/activity_small.png"> -->
 		<div class="up">
 			<div class="img_logo layout">
