--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -58,7 +58,7 @@ body{
   top: 15px;
   width: 20px;
   height: 20px;
-  z-index: 9999999999999999;
+  z-index: 9999999999;
 }
 .off img {
   width: 100%;
@@ -74,14 +74,14 @@ body{
   top: 0;
   width: 100%;
   height: 100%;
-  margin: 30% auto;
+  margin: 20% auto;
   z-index: 99999999;
 }
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
-  width: 3.35rem;
+  width: 2.67rem;
   /*width: 60%;*/
   height: 60%;
   height: 0;
@@ -89,7 +89,7 @@ body{
 }
 .swiper-slide img {
   /*width: 3.34rem;*/
-  width: 3.35rem;
+  width: 2.67rem;
 }
 /*
 .fix_container .left{
@@ -170,11 +170,11 @@ body{
   </div>
 <!-- 礼物弹窗 -->
 <div class="swiper-container" id ="share_ctrl">
-  <div class="off" ng-click="shareHide()"><img src="img/index_img/X.png" srcset="img/index_img/xx.png 568w, img/index_img/X.png 667w, img/index_img/X.png 736w"></div>
-  <div class="opacity_ctrl"></div>
+  <div class="off" ><img src="img/index_img/X.png" srcset="img/index_img/xx.png 568w, img/index_img/X.png 667w, img/index_img/X.png 736w"></div>
+  <div class="opacity_ctrl" id="opacity_ctrl"></div>
   <div class="swiper-wrapper">
-    <div class="swiper-slide" style="width: 260px;" ><img ng-click="goSports()" src="img/index_img/jixian_big.png" srcset="img/index_img/jixian_small.png 568w, img/index_img/jixian_big.png 667w, img/index_img/jixian_big.png 736w"></div>
-    <div class="swiper-slide" style="width: 260px;" ><img ng-click="goIndexShare()" src="img/index_img/five_big.png" srcset="img/index_img/five_small.png 568w, img/index_img/five_big.png 667w, img/index_img/five_big.png 736w"></div>
+    <div class="swiper-slide" style="width: 260px;" ><img ng-click="goSports()" src="img/index_img/jixian_big.png" ></div>
+    <div class="swiper-slide" style="width: 260px;" ><img ng-click="goIndexShare()" src="img/index_img/five_big.png" ></div>
   </div>
 </div>
 <script src="wx_bx_gl/js/swiper.min.js"></script>
@@ -205,9 +205,9 @@ body{
 /*Swiper Js*/
   var swiper = new Swiper('.swiper-container', {
       pagination: '.swiper-pagination',
-      slidesPerView: 1.2,
+      slidesPerView: 1.5,
       centeredSlides: true,
       paginationClickable: true,
-      spaceBetween: 12
+      spaceBetween: 40
   });
 </script>
